--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "firebase": "^8.1.2",
+    "firebase-tools": "^9.10.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-avatar-editor": "^11.0.13",
