--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "rsuite": "^4.9.3",
     "timeago-react": "^3.0.2",
     "use-context-selector": "^1.3.7",
     "web-vitals": "^1.1.1",
