--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-mic": "^12.4.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "rsuite": "^4.9.3",
+    "react-scripts": "^4.0.3",
+    "rsuite": "^4.9.1",
     "timeago-react": "^3.0.2",
     "use-context-selector": "^1.3.7",
     "web-vitals": "^1.1.1",
@@ -62,6 +62,7 @@
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
